# Tutorial_AtmosphereOceansOnComputers_Diffusion_2d_instat_serial

./: .gitignore  CMakeLists.txt  README.md  build_diffusion.sh  diffusion.cc  env_JUWELS_Stage2022.sh  env_JUWELS_Stage2024.sh  jacobi_namelist.txt  remarks.txt
.github/ISSUE_TEMPLATE/: feature_request.md
input/: jacobi_namelist.txt
src/: CMakeLists.txt  Diffusion_FDM_1d.cc  Diffusion_FDM_1d.h  Diffusion_FDM_2d.cc  Diffusion_FDM_2d.h  diffusion.cc
